typo in dependency